--- a/src/components/Forms/RouteForm/RouteForm.scss
+++ b/src/components/Forms/RouteForm/RouteForm.scss
@@ -6,11 +6,8 @@ $primary-color: #8a2be2;
     justify-content: flex-end;
     width: 100%;
     padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 1rem;
-    padding: 0 1rem;
+    padding: 0;
 
     .input-wrapper {
         margin-bottom: 10px;
@@ -29,9 +26,6 @@ $primary-color: #8a2be2;
             font-size: 14px;
 
             // Styling the date input icon
-            &::-webkit-calendar-picker-indicator {
-                display: none;
-            }
 
 
 
@@ -77,27 +71,28 @@ $primary-color: #8a2be2;
 
     .route-btn-container {
         display: flex;
-        justify-content: flex-start;
+        justify-content: flex-end;
         margin-bottom: 1rem;
-    }
 
+        button[type='submit'] {
+            padding: 8px 16px;
+            background-color: #8a2be2;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out;
 
-    button[type="submit"] {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: .5rem 1rem;
-        margin-top: .5rem;
-        background-color: #e8e8e8;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        transition: all .3s ease-in-out;
-        cursor: pointer;
+            &:hover {
+                background-color: #6927a9;
+            }
 
-        &:hover {
-            background-color: #f3e9fc;
-            border: 1px solid #8a2be2;
-            color: #8a2be2;
+            &:disabled {
+                background-color: #ccc;
+                cursor: not-allowed;
+            }
         }
     }
+
 }
