--- a/src/components/Forms/StakeholderForm/StakeholderForm.scss
+++ b/src/components/Forms/StakeholderForm/StakeholderForm.scss
@@ -22,7 +22,6 @@
   background-color: #fff;
   border-bottom: 1px solid #ddd;
 
-
   @media (max-width: 1024px) {
     height: auto; /* Change height to auto for dynamic height */
     flex-direction: column;
@@ -34,62 +33,65 @@
     white-space: normal; /* Allow title to wrap to multiple lines */
     overflow: hidden;
     text-overflow: ellipsis;
-    padding: .5rem 0;
     text-align: left;
-  }
-
-  .form-heading-btn {
-    display: flex;
-    align-items: center;
-    width: fit-content;
 
     @media (max-width: 1024px) {
-      button{
+      margin-bottom: 1rem;
+    }
+  }
+}
+
+.form-heading-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+
+  @media (max-width: 1024px) {
+    button{
+      margin-left: 0;
+    }
+  }
+
+  button {
+    padding: 8px 16px;
+    background-color: #8a2be2;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    width: fit-content; /* Adjust width to fit content */
+    margin-right: 1rem;
+
+    @media (max-width: 1024px) {
         margin-left: 0;
-      }
+        margin-right: 1rem;
     }
 
-    button {
-      padding: 8px 16px;
-      background-color: #8a2be2;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease-in-out;
-      width: fit-content; /* Adjust width to fit content */
-      margin-left: 1rem;
+    &:hover {
+      background-color: #6927a9;
+    }
+  }
 
-      @media (max-width: 1024px) {
-          margin-left: 0;
-          margin-right: 1rem;
-      }
+  button[type='submit'] {
+    padding: 8px 16px;
+    background-color: #8a2be2;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 
-      &:hover {
-        background-color: #6927a9;
-      }
+    &:hover {
+      background-color: #6927a9;
     }
 
-    button[type='submit'] {
-      padding: 8px 16px;
-      background-color: #8a2be2;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease-in-out;
-      width: 100%;
-
-      &:hover {
-        background-color: #6927a9;
-      }
-
-      &:disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
-      }
+    &:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
     }
   }
 }
@@ -164,7 +166,6 @@
           flex-grow: 1;
           background-color: #fafafa;
         }
-
       }
 
       label {
@@ -174,7 +175,6 @@
         text-align: left;
         margin-bottom: .5rem;
       }
-
     }
 
     .form-row {
@@ -199,8 +199,6 @@
         resize: none;
         background-color: #fafafa;
       }
-
-
 
       &.dropdowns {
         display: flex;
@@ -277,5 +275,4 @@
       }
     }
   }
-
 }
