--- a/src/components/Forms/TractForm/TractForm.scss
+++ b/src/components/Forms/TractForm/TractForm.scss
@@ -7,21 +7,37 @@
     max-height: fit-content;
     height: fit-content;
     background-color: #fff;
+    
 
     @media (max-width: 1024px) {
         display: flex;
         flex-direction: column;
+        margin-bottom: 1rem;
     }
 
 
     .tract-form-name {
-        width: 100%;
-        height: fit-content;
+        width: auto;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        border: .5px solid #ddd;
+
+        label {
+            background-color: #fff;
+            width: 100%;
+            padding: .5rem;
+            border-bottom: 1px solid #ddd;
+
+            @media (max-width: 1024px) {
+                border-bottom: none;
+            }
+        }
 
         @media (max-width: 1024px) {
+            
+
             label {
                 display: none;
 
@@ -41,8 +57,10 @@
             padding: .5rem;
             grid-column: 1 / span 2;
 
+
             h4 {
                 margin: 0;
+                overflow: hidden;
                 text-overflow: ellipsis;
                 padding: 0 .5rem;
 
@@ -61,12 +79,6 @@
         }
     }
 
-    .table-row {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: fit-content;
-    }
 
     .tract-form-cell {
         height: 100%;
@@ -123,6 +135,5 @@
 
 
     }
-
 
 }
