--- a/src/components/List/Connections/Connections.scss
+++ b/src/components/List/Connections/Connections.scss
@@ -6,11 +6,7 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem;
-
-  .column-header{
-    padding-bottom: .5rem;
-  }
+  padding: 1rem 1rem;
 
   p {
     font-size: 14px;
@@ -31,7 +27,6 @@
     overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color: #8a2be2 #f4f4f4;
-
 
     &::-webkit-scrollbar {
       width: 5px;
@@ -66,9 +61,8 @@
         margin-bottom: 1rem;
 
         h3 {
-          font-weight: 500;
           width: 100%;
-          margin-bottom: 8px;
+          margin-bottom: 1rem;
           color: #333;
           text-align: center;
         }
@@ -98,6 +92,10 @@
               width: 20px;
               height: 20px;
             }
+          }
+
+          a {
+            color: #333;
           }
 
           .icon-active {
