--- a/src/components/Table/StakeholderTable/StakeholderTable.scss
+++ b/src/components/Table/StakeholderTable/StakeholderTable.scss
@@ -8,11 +8,15 @@ $dot-animation-duration: 1s;
   width: 100%;
   margin: 0;
   border-collapse: separate;
-  border-spacing: 0 10px;
+  border-spacing: 0;
   border-radius: 5px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 
   thead {
-    background-color: #eaeaea;
+    background-color: #f0f0f0;
     border: none;
     color: grey;
     text-align: center;
@@ -24,7 +28,7 @@ $dot-animation-duration: 1s;
 
     th {
       text-transform: uppercase;
-      padding: 12px 5px;
+      padding: 10px;
       height: 60px;
       font-size: 14px;
       font-weight: 600;
