--- a/src/components/TableRow/StakeholderTableRow/StakeholderTableRow.scss
+++ b/src/components/TableRow/StakeholderTableRow/StakeholderTableRow.scss
@@ -2,122 +2,134 @@ $dot-size: 20px;
 $dot-animation-duration: 1s;
 $primary-color: #8a2be2;
 
-
-tbody {
-
-  tr {
-    height: 80px;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    border-radius: 10;
-    overflow: hidden;
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
-    text-align: center;
-
-
-    &:not(:last-child) {
-      margin-bottom: 1rem;
-      /* Adjust the desired spacing between rows */
-    }
-
-    &:hover {
-      background-color: #f9f9f9;
-    }
-
-    td {
-      padding: 12px 5px;
-      font-weight: normal;
-      font-size: 14px;
-      border-bottom: 1px solid #ddd;
-
-      &:nth-child(3) {
-        position: relative;
-
-        .dot {
-          width: $dot-size;
-          height: $dot-size;
-          border-radius: 50%;
-          animation-duration: $dot-animation-duration;
-          animation-iteration-count: infinite;
-          animation-timing-function: ease-in-out;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
-
-        .green-dot {
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background-color: rgba(0, 255, 0, 1);
-          box-shadow: 0 0 8px 3px rgba(0, 255, 0, 0.8);
-          /* Reduced spread radius */
-          animation: pulse 1.5s ease-in-out infinite;
-        }
-
-        .red-dot {
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background-color: rgba(255, 0, 0, 1);
-          box-shadow: 0 0 8px 3px rgba(255, 0, 0, 0.8);
-          /* Reduced spread radius */
-          animation: pulse 1.5s ease-in-out infinite;
-        }
-
-        .yellow-dot {
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background-color: rgba(255, 255, 0, 1);
-          box-shadow: 0 0 8px 3px rgba(255, 255, 0, 0.8);
-          /* Reduced spread radius */
-          animation: pulse 1.5s ease-in-out infinite;
+.stakeholder-tbl{
+  tbody {
+    tr {
+      height: 80px;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      border-radius: 10;
+      overflow: hidden;
+      background-color: #fff;
+      text-align: center;
+  
+      &:not(:last-child) {
+        margin-bottom: 1rem;
+        /* Adjust the desired spacing between rows */
+      }
+  
+      &:hover {
+        background-color: #eaeaea;
+      }
+  
+      &:nth-child(even) {
+        background-color: #f9f9f9;
+        &:hover {
+          background-color: #eaeaea;
         }
       }
-
-      &:first-child {
-        width: auto;
-        max-width: 400px;
-        text-align: left;
-      }
-
-      &.location-cell {
-        white-space: nowrap;
-      }
-
-      &.interest-cell {
-        ul {
-          list-style: none;
-          padding: 0;
-          margin: 0;
-
-          li {
-            margin-bottom: 0.5rem;
+  
+      td {
+        padding: 10px;
+        font-weight: normal;
+        font-size: 14px;
+  
+        &:nth-child(1) { /* Adjust this to target the first column */
+          flex: 1; /* Use flex to allow the column to grow and fill available space */
+          flex-basis: 400px; /* Set a fixed width for the first column */
+          text-align: left; /* Align text to the left in the first column */
+        }
+  
+        &:nth-child(3) {
+          position: relative;
+  
+          .dot {
+            width: $dot-size;
+            height: $dot-size;
+            border-radius: 50%;
+            animation-duration: $dot-animation-duration;
+            animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+  
+          .green-dot {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: rgba(0, 255, 0, 1);
+            box-shadow: 0 0 8px 3px rgba(0, 255, 0, 0.8);
+            /* Reduced spread radius */
+            animation: pulse 1.5s ease-in-out infinite;
+          }
+  
+          .red-dot {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: rgba(255, 0, 0, 1);
+            box-shadow: 0 0 8px 3px rgba(255, 0, 0, 0.8);
+            /* Reduced spread radius */
+            animation: pulse 1.5s ease-in-out infinite;
+          }
+  
+          .yellow-dot {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 0, 1);
+            box-shadow: 0 0 8px 3px rgba(255, 255, 0, 0.8);
+            /* Reduced spread radius */
+            animation: pulse 1.5s ease-in-out infinite;
           }
         }
-      }
-
-      a,
-      av {
-        display: inline-block;
-        padding: 5px 10px;
-        border-radius: 4px;
-        font-size: 14px;
-        text-align: center;
-      }
-
-      a {
-        background-color: lighten($primary-color, 25%);
-        color: $primary-color;
-      }
-
-      av {
-        background-color: lighten(#48bb78, 25%);
-        color: #48bb78;
+  
+        &:first-child {
+          width: auto;
+          max-width: 400px;
+          text-align: left;
+        }
+  
+        &.location-cell {
+          white-space: nowrap;
+        }
+  
+        &.interest-cell {
+          ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+  
+            li {
+              margin-bottom: 0.5rem;
+            }
+          }
+        }
+  
+        a,
+        av {
+          display: inline-block;
+          padding: 5px 10px;
+          border-radius: 4px;
+          font-size: 14px;
+          text-align: center;
+        }
+  
+        a {
+          background-color: lighten($primary-color, 25%);
+          color: $primary-color;
+        }
+  
+        av {
+          background-color: lighten(#48bb78, 25%);
+          color: #48bb78;
+        }
       }
     }
   }
+  
 }
+
