--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,6 +33,87 @@ label {
     text-align: left;
 }
 
+.list-container {
+    margin-bottom: 1rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    grid-gap: 1rem;
+    align-items: flex-start;
+    padding: 0 1rem;
+
+    // .form-label {
+    //   display: block;
+    //   font-weight: bold;
+    //   margin-bottom: 5px;
+    //   align-self: start;
+    //   height: 100%;
+
+    //   display: flex;
+    //   align-items: flex-start;
+    //   justify-content: flex-end;
+    // }
+
+    .list-search-input {
+        width: 100%;
+        margin-bottom: .5rem;
+        padding: 8px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease;
+        position: sticky;
+        top: 0;
+
+        &:focus {
+            outline: none;
+            box-shadow: 0 0 4px rgba(138, 43, 226, 0.8);
+        }
+
+        &::placeholder {
+            color: #999;
+        }
+    }
+
+
+    .list-wrapper {
+        display: flex;
+        flex-direction: column;
+
+
+
+
+        label {
+            margin-bottom: 0.5rem;
+            display: flex;
+            align-items: baseline;
+            text-align: left;
+            padding: .5rem;
+            width: 75%;
+            height: fit-content;
+            border-radius: 5px;
+            border: 1px solid #fff;
+
+            .list-info {
+                display: flex;
+                flex-direction: column;
+            }
+
+            &:hover {
+                cursor: pointer;
+                background-color: #f5f5f5;
+                border: 1px solid #ddd;
+            }
+
+            input[type='radio'],
+            input[type='checkbox'] {
+                margin-right: 0.5rem;
+            }
+        }
+    }
+}
+
 // Mobile styles
 @media (max-width: 768px) {
     h1 {
@@ -95,7 +176,7 @@ select {
     font-size: 1rem;
 }
 
-.body{
+.body {
     padding: 1rem;
 }
 
@@ -106,33 +187,48 @@ select {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #ddd;
-    
     margin-bottom: 1rem;
     color: #8a2be2;
-  }
-  
+}
 
-  .padding{
+
+.padding {
     padding: 0 1rem;
-  }
+}
 
-  .page-header {
+.btn-delete {
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    cursor: pointer;
+    transition: ease-in-out .3s;
+
+    &:hover {
+        background-color: #f5f5f5;
+        color: red;
+    }
+}
+
+.page-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 1rem;
     padding: 1rem;
+    margin-bottom: .5rem;
     background-color: #fff;
     border-bottom: 1px solid #ddd;
     height: 60px;
+    width: 100%;
 
-    h1 {
-        white-space: normal; /* Allow title to wrap to multiple lines */
+    h3 {
+        white-space: normal;
         overflow: hidden;
         text-overflow: ellipsis;
         padding: .5rem 0;
         text-align: left;
-      }
+    }
 
     button {
         display: flex;
@@ -156,12 +252,11 @@ select {
             margin-left: 1rem;
         }
 
-
         &:hover {
             background-color: #f3e9fc;
             color: #8a2be2;
 
-            .icon{
+            .icon {
                 transform: translateY(.1rem);
                 transition: ease-in-out .3s;
             }
@@ -176,21 +271,191 @@ select {
     padding: 1rem 0;
 
     button {
+        padding: 8px 16px;
         background-color: #8a2be2;
         color: #fff;
         border: none;
-        padding: 8px 16px;
         border-radius: 4px;
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        font-weight: 500;
+        font-size: 16px;
         cursor: pointer;
-        transition: ease-in-out .3s;
+        transition: background-color 0.3s ease-in-out;
+        width: fit-content; /* Adjust width to fit content */
+    
+        @media (max-width: 1024px) {
+            margin-left: 0;
+            margin-right: 1rem;
+        }
+    
+        &:hover {
+          background-color: #6927a9;
+        }
+      }
+}
 
+
+.radio-wrapper {
+
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    list-style-type: none;
+
+    .input-wrapper {
+        margin-bottom: 1rem;
+        width: 100%;
+
+        label {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            width: 100%;
+        }
+    }
+
+
+    .input-wrapper {
+        position: relative;
+        margin-right: 1rem;
+
+        input {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 100;
+            width: 100%;
+
+            &:checked+label {
+                background-color: #8a2be2;
+                color: #fff;
+            }
+        }
+
+        label {
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 14px;
+            cursor: pointer;
+            z-index: 90;
+            transition: background-color ease-in-out .3s, color ease-in-out .3s;
+
+            &:hover {
+                background-color: #8a2be2;
+                color: #fff;
+            }
+        }
+    }
+}
+
+.tbl-btn-container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1rem;
+
+    .tbl-btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-right: 1rem;
+        border-radius: 4px;
+
+        width: 60px;
+        height: 60px;
+
+        background: none;
+        border: none;
+        cursor: pointer;
+        transition: all .3s ease-in-out;
+        color: grey;
+
+        .btn-icon {
+            width: 24px;
+            height: 24px;
+            margin-bottom: .5rem;
+            color: grey;
+            transition: all .3s ease-in-out;
+        }
 
         &:hover {
-            background-color: #6927a9;
+            color: $primary-color;
+            background-color: #f3e9fc;
+
+            .btn-icon {
+                color: $primary-color;
+            }
+        }
+    }
+}
+
+.popup-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding: 1rem;
+
+    h2 {
+        margin: 0;
+        font-size: 24px;
+        font-weight: 500;
+        text-align: left;
+    }
+
+    button {
+        border: none;
+        border-radius: 50px;
+        height: 30px;
+        width: 30px;
+        background-color: #fff;
+        transition: ease-in-out .3s;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            color: #fff;
+            background-color: #8a2be2;
+            cursor: pointer;
+        }
+    }
+}
+
+.popup-footer {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    label {
+        display: block;
+        font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        color: #333;
+    }
+
+
+    button {
+        background-color: blue;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: darkblue;
         }
     }
 }
